--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .wrapper {
-	width: 1000px;
+	width: 960px;
 	height: 100%;
 	background-color: #F5F0EB;
 	margin-left: auto;
 	margin-right: auto;
 	padding: 25px;
-	font-family: 'helvetica';
+	font-family: 'raleway';
 }
 
 h1 {
@@ -17,18 +17,63 @@ h1 {
 .logo {
 	text-align: center;
 	width: 300px;
-	padding: 25px 15px;
+	padding: 20px 10px;
 	margin-left: auto;
 	margin-right: auto;
-	border: 1px solid #EE8262;
+	border: 2px solid #FF7256;
+	border-radius: 3px;
 }
 
 .about {
 	width: 400px;
 	text-align: center;
-	margin-left: 300px;
+	margin-left: 280px;
 	margin-right: 250px;
 	/*border: 1px solid black;*/
 	color: #330000;
-	margin-top: 15px;
+	margin-top: 25px;
+}
+
+.break {
+	text-align: center;
+	padding-top: 50px;
+}
+
+.section_group {
+	clear: both;
+	padding: 0px;
+	margin: 0px;
+	height: 1000px;
+}
+
+.col {
+	display: block;
+	float: left;
+	margin: 5% 0 1% 11%;
+	border: 1px solid black;
+	border-radius: 1px;
+	width: 175px;
+	height: 90px;
+	text-align: center;
+	padding-top: 75px;
+}
+
+.col: first-child {
+	margin-left: 0;
+}
+
+
+footer {
+	clear: both;
+	margin-top: 100px;
+	padding-top: 15px;
+	padding-bottom: 0px;
+	padding-left: 200px;
+	font-weight: bold;
+	margin-left: 0px;
+}
+
+footer span {
+	clear: both;
+	
 }
